--- a/BigTech.Api/BigTech.Api.csproj
+++ b/BigTech.Api/BigTech.Api.csproj
@@ -10,6 +10,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BigTech.Application\BigTech.Application.csproj" />
+    <ProjectReference Include="..\BigTech.DAL\BigTech.DAL.csproj" />
   </ItemGroup>
 
 </Project>
