Create JWT authentification

--- a/BigTech.Api/appsettings.json
+++ b/BigTech.Api/appsettings.json
@@ -23,5 +23,13 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ]
+  },
+  "Jwt": {
+    "Issuer": "Bigtech",
+    "Audience": "Bigtech",
+    "Authority": "Bigtech",
+    "JwtKey": "(FI03gi03g9ik3g0i90IK(KUG9jg94u84gu0i7u9IY83",
+    "Lifetime": 15,
+    "RefreshTokenValidityInDays": 7
   }
 }
