--- a/BigTech.Api/appsettings.json
+++ b/BigTech.Api/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Keycloak": {
+    "AuthorizationUrl": "http://localhost:8080/realms/keycloak-auth-demo/protocol/openid-connect/auth"
+  },
+  "Authentification": {
+    "MetadataAddress": "http://localhost:8080/realms/keycloak-auth-demo/.well-known/openid-configuration",
+    "ValidIssuer": "http://localhost:8080/realms/keycloak-auth-demo",
+    "Audience": "account"
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
     "MinimumLevel": {
