--- a/BigTech.Api/appsettings.json
+++ b/BigTech.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "RabbitMq": {
+    "QueueName": "test_queue",
+    "RoutingKey": "bigtech.topic",
+    "ExchangeName": "bigtech.exchange"
+  },
   "Keycloak": {
     "AuthorizationUrl": "http://localhost:8080/realms/keycloak-auth-demo/protocol/openid-connect/auth"
   },
