Add Docker and Cache

--- a/BigTech.Api/appsettings.json
+++ b/BigTech.Api/appsettings.json
@@ -1,5 +1,16 @@
 {
+  "Redis": {
+    "Url": "localhost",
+    "RoutingKey": "local"
+  },
+  "ConnectionStrings": {
+    "PostgresSQL": "Server=localhost;Port=5432;Database=BigTech;User Id = postgres;Password=postgres"
+  },
   "RabbitMq": {
+    "HostName": "localhost",
+    "Port": 5670,
+    "Password": "password",
+    "UserName": "user",
     "QueueName": "test_queue",
     "RoutingKey": "bigtech.topic",
     "ExchangeName": "bigtech.exchange"
