--- a/BigTech.Api/appsettings.json
+++ b/BigTech.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Redis": {
     "Url": "localhost",
-    "RoutingKey": "local"
+    "InstanceName": "local"
   },
   "ConnectionStrings": {
     "PostgresSQL": "Server=localhost;Port=5432;Database=BigTech;User Id = postgres;Password=postgres"
